# nacosdesk

./: .eslintrc.cjs  .gitignore  AGENTS.md  LICENSE  README.md  TODO-TESTS.md  TODO.md  commitlint.config.cjs  index.html  package.json  pnpm-lock.yaml  rolldown.config.ts  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: backup.rs  mod.rs  schema.sql
src-tauri/src/db/migrations/: 001_users_and_permissions.sql  002_tenant_info.sql  003_config_tables.sql  004_service_tables.sql  005_token_tables.sql  006_subscribers_table.sql  007_heartbeats_table.sql  008_api_logs_table.sql  009_config_info_beta.sql  010_performance_indexes.sql
src-tauri/src/server/: mod.rs  router.rs
src-tauri/src/server/handlers/: auth.rs  config.rs  health.rs  instance.rs  mod.rs  namespace.rs  operator.rs  service.rs
src-tauri/src/server/middleware/: access_log.rs  auth.rs  ip_whitelist.rs  metrics.rs  mod.rs  rate_limit.rs
src-tauri/src/server/tests/: README.md  auth_integration_tests.rs  auth_tests.rs  config_history_previous_tests.rs  config_integration_tests.rs  config_standard_api_tests.rs  config_tests.rs  console_api_integration_tests.rs  db_setup.rs  health_integration_tests.rs  health_tests.rs  helpers.rs  instance_health_tests.rs  instance_integration_tests.rs  instance_standard_api_tests.rs  instance_tests.rs  integration_tests.rs  mod.rs  (+5 more)
src-tauri/src/service/: mod.rs
src-tauri/src/tenant/: mod.rs
(+139 files in other folders)
